--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.1.2",
     "@react-pdf/renderer": "^3.4.4",
+    "@tanstack/react-query": "^5.44.0",
+    "ethers": "^6.13.0",
     "next": "14.2.3",
     "node-modules": "^1.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.13.8",
+    "wagmi": "^2.10.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
